log
Thu 14 Sep 2023 02:56:19 AM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
2c935c3
Thu 14 Sep 2023 03:03:43 AM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  6|7
total_score: 5/70
99b9abe
Thu 14 Sep 2023 03:05:39 AM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  6|7
total_score: 5/70
81e56fb
Thu 14 Sep 2023 03:06:29 AM UTC: 
 treemap.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
 tests:  6|7
total_score: 5/70
1753d7f
Thu 14 Sep 2023 03:12:21 AM UTC: 
 treemap.c | 24 +++++++-----------------
 1 file changed, 7 insertions(+), 17 deletions(-)
 tests:  11|6
total_score: 15/70
a0bd270
Thu 14 Sep 2023 03:29:57 AM UTC: 
 treemap.c | 33 +++++++++++++++++++++++++++++++++
 1 file changed, 33 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:84:23: error: ‘nuevoNodo’ undeclared (first use in this function)
   84 |       parent->right = nuevoNodo;
      |                       ^~~~~~~~~
treemap.c:84:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
077f7f7
Thu 14 Sep 2023 03:30:16 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
94da9fb
Thu 14 Sep 2023 04:33:58 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
01ca3aa
